# lucid-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROMPT_TEMPLATE.md  README.md  arc-dec.md  claude.sh  exe_test.md  hirechy.md  result.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: pattern-discovery.md  plugin-debugger.md  subagent-auditor.md  usage-analysis.md
.claude/commands/: audit-skill.md  cookbook.md  debug-plugin.md  fix-faults.md  plugins.md  pub-ws.md  (+1 more)
docs/: agent-colors.md
plans/: toon-specialist-design.md
plugins/ws/scripts/: README.md  pyproject.toml
plugins/ws/scripts/src/workspace_info/: __init__.py  cli.py  constants.py  core.py  hook.py
plugins/ws/scripts/tests/workspace_info/: conftest.py  test_cli.py  test_core.py  test_hook.py
plugins/ws/scripts/tests/workspace_info/fixtures/: corrupted_workspace_info.toon  minimal_workspace_info.toon  valid_workspace_info.toon
plugins/ws/scripts/tests/workspace_info/fixtures/hook_inputs/: post_tool_use_edit.json  session_start.json
reports/: session-analysis-2025-12-13.md
scripts/: migrate_lucid_stack.py
shared/: HOOKS.md  SCHEMA_COMPATIBILITY.md  TOON_IMPLEMENTATION_PLAN.md  TOON_INTEGRATION.md
shared/cli-commons/: README.md  TOON_PARSER_README.md  TOON_PARSER_SUMMARY.md  TOON_QUICK_START.md  pyproject.toml
shared/cli-commons/examples/: toon_examples.py
shared/cli-commons/src/lucid_cli_commons/: __init__.py  git_utils.py  locking.py  notification.py  paths.py  toon_parser.py  validation.py
shared/cli-commons/tests/: __init__.py  test_toon_parser.py
(+512 files in other folders)
